[gd_scene load_steps=41 format=3 uid="uid://618x4cs781ri"]

[ext_resource type="Texture2D" uid="uid://y6o40vd6fehj" path="res://Art/Enemies/Foot Soldier/Attack/Foot Soldier Attack-Sheet.png" id="1_6hrp6"]
[ext_resource type="Script" path="res://Scenes/enemys/Foot_Soldier/Foot_Soldier.gd" id="1_otqes"]
[ext_resource type="Texture2D" uid="uid://dfpxwk1wr7clu" path="res://Art/Enemies/Foot Soldier/Death (No Gore)/Foot Soldier Death (No Gore)-Sheet.png" id="2_wd804"]
[ext_resource type="Texture2D" uid="uid://dsy2ba6ht1hcu" path="res://Art/Enemies/Foot Soldier/Walk/Foot Soldier Walk-Sheet.png" id="3_6b0jd"]
[ext_resource type="Texture2D" uid="uid://b6xl8ktdyekh3" path="res://Art/Enemies/Foot Soldier/Foot Soldeir.png" id="5_5utsf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dxymc"]
atlas = ExtResource("1_6hrp6")
region = Rect2(0, 0, 445, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_s736p"]
atlas = ExtResource("1_6hrp6")
region = Rect2(445, 0, 445, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4gna"]
atlas = ExtResource("1_6hrp6")
region = Rect2(890, 0, 445, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_21wif"]
atlas = ExtResource("1_6hrp6")
region = Rect2(1335, 0, 445, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyl5j"]
atlas = ExtResource("1_6hrp6")
region = Rect2(1780, 0, 445, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_3av2g"]
atlas = ExtResource("1_6hrp6")
region = Rect2(2225, 0, 445, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbrh3"]
atlas = ExtResource("1_6hrp6")
region = Rect2(2670, 0, 445, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvvm6"]
atlas = ExtResource("1_6hrp6")
region = Rect2(3115, 0, 445, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kwnf"]
atlas = ExtResource("2_wd804")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x7kw"]
atlas = ExtResource("2_wd804")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hb63"]
atlas = ExtResource("2_wd804")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h4pf"]
atlas = ExtResource("2_wd804")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu8sl"]
atlas = ExtResource("2_wd804")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ky28"]
atlas = ExtResource("2_wd804")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwn0r"]
atlas = ExtResource("2_wd804")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcgpv"]
atlas = ExtResource("2_wd804")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_lludl"]
atlas = ExtResource("2_wd804")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwydg"]
atlas = ExtResource("2_wd804")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h2m4"]
atlas = ExtResource("2_wd804")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaiyq"]
atlas = ExtResource("2_wd804")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6pxq"]
atlas = ExtResource("2_wd804")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_e36v6"]
atlas = ExtResource("3_6b0jd")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hpp0"]
atlas = ExtResource("3_6b0jd")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0o1t"]
atlas = ExtResource("3_6b0jd")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rxgw"]
atlas = ExtResource("3_6b0jd")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld2ux"]
atlas = ExtResource("3_6b0jd")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sc7s"]
atlas = ExtResource("3_6b0jd")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy1tt"]
atlas = ExtResource("3_6b0jd")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqjha"]
atlas = ExtResource("3_6b0jd")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4twt"]
atlas = ExtResource("3_6b0jd")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="SpriteFrames" id="SpriteFrames_a3ilm"]
animations = [{
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_dxymc")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_s736p")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_h4gna")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_21wif")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_vyl5j")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_3av2g")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_lbrh3")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_cvvm6")
}],
"loop": false,
"name": &"Foot_E_Attack",
"speed": 3.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_2kwnf")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_3x7kw")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_4hb63")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_6h4pf")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_mu8sl")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_2ky28")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_uwn0r")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_pcgpv")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_lludl")
}],
"loop": false,
"name": &"Foot_E_Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwydg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h2m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaiyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6pxq")
}],
"loop": false,
"name": &"Foot_E_Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e36v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hpp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0o1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rxgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld2ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sc7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy1tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqjha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4twt")
}],
"loop": false,
"name": &"Foot_E_Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_5utsf")
}],
"loop": false,
"name": &"Foot_E_idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yohbb"]
radius = 61.1111

[sub_resource type="CircleShape2D" id="CircleShape2D_wnpgr"]
radius = 1012.11

[sub_resource type="CircleShape2D" id="CircleShape2D_04qe4"]
radius = 211.111

[sub_resource type="CircleShape2D" id="CircleShape2D_udkv7"]
radius = 261.17

[node name="Foot Soldier" type="CharacterBody2D"]
z_index = 1
scale = Vector2(0.18, 0.18)
script = ExtResource("1_otqes")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_a3ilm")
animation = &"Foot_E_Hurt"

[node name="CollisionBox" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(22.2222, -11.1111)
shape = SubResource("CircleShape2D_yohbb")
debug_color = Color(0.931, 0, 0.654, 0.114)

[node name="Dectector" type="Area2D" parent="."]
position = Vector2(22.2222, -11.1111)

[node name="Search_Area" type="CollisionShape2D" parent="Dectector"]
z_index = 1
shape = SubResource("CircleShape2D_wnpgr")
debug_color = Color(0.750807, 0.458662, 0, 0.124)

[node name="Foot_Attack_Area" type="Area2D" parent="."]
z_index = 1
position = Vector2(22.2222, -11.1111)

[node name="Foot_Attack_Area" type="CollisionShape2D" parent="Foot_Attack_Area"]
z_index = 1
position = Vector2(4.76837e-07, 0)
shape = SubResource("CircleShape2D_04qe4")
debug_color = Color(0.751291, 0.118527, 0, 0.205)

[node name="Foot_Hit_Area" type="Area2D" parent="."]
position = Vector2(22.2222, -11.1111)

[node name="Foot_Hit_Area" type="CollisionShape2D" parent="Foot_Hit_Area"]
position = Vector2(-4.76837e-07, 0)
shape = SubResource("CircleShape2D_udkv7")
debug_color = Color(0.718269, 0.480954, 0, 0.42)

[node name="Attack_cooldown_False" type="Timer" parent="."]
process_callback = 0

[node name="damage_cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1

[connection signal="body_entered" from="Dectector" to="." method="_on_dectector_body_entered"]
[connection signal="body_exited" from="Dectector" to="." method="_on_dectector_body_exited"]
[connection signal="body_entered" from="Foot_Attack_Area" to="." method="_on_foot_attack_area_body_entered"]
[connection signal="body_entered" from="Foot_Attack_Area" to="." method="_on_foot_hit_box_body_entered"]
[connection signal="body_exited" from="Foot_Attack_Area" to="." method="_on_foot_attack_area_body_exited"]
[connection signal="body_exited" from="Foot_Attack_Area" to="." method="_on_foot_hit_box_body_exited"]
[connection signal="area_shape_entered" from="Foot_Hit_Area" to="." method="_on_foot_hit_area_area_shape_entered"]
[connection signal="area_shape_exited" from="Foot_Hit_Area" to="." method="_on_foot_hit_area_area_shape_exited"]
[connection signal="body_entered" from="Foot_Hit_Area" to="." method="_on_foot_hit_area_body_entered"]
[connection signal="body_exited" from="Foot_Hit_Area" to="." method="_on_foot_hit_area_body_exited"]
[connection signal="timeout" from="Attack_cooldown_False" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="damage_cooldown" to="." method="_on_damage_cooldown_timeout"]
